[project]
name = "simple-dependency-injector"
version = "0.1.0"
description = "A simple reflection-based dependency injector."
authors = [
    { name = "Willian Antonio dos Santos", email = "will1.scientist@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["dependency-injection", "reflection", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["taskipy (>=1.14.1,<2.0.0)"]


[project.urls]
Homepage = "https://github.com/Will1Dexter/simple-dependency-injector"
Documentation = "https://github.com/Will1Dexter/simple-dependency-injector/blob/master/README.md"
Repository = "https://github.com/Will1Dexter/simple-dependency-injector"
Issues = "https://github.com/Will1Dexter/simple-dependency-injector/issues"
# Changelog = "https://github.com/Will1Dexter/simple-dependency-injector/blob/master/CHANGELOG.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "isort . && blue ."

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^6.0.1"
